# BigInt

./: CMakeLists.txt  LICENSE  README.md
include/: BigInt.h
src/: bigint.cpp
test/: BigInt.cpp  CMakeLists.txt
